<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/high_margin"
        android:layout_marginStart="@dimen/high_margin"
        android:layout_marginTop="@dimen/medium_margin">

        <TextView
            android:id="@+id/room_name_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/room_name"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/big_text"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/room_department_detail_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:padding="@dimen/lowest_margin"
            android:text="@string/department_label"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/standard_text"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/room_name_detail"/>

        <TextView
            android:id="@+id/room_department_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:padding="@dimen/lowest_margin"
            android:textSize="@dimen/standard_text"
            app:layout_constraintStart_toEndOf="@id/room_department_detail_label"
            app:layout_constraintTop_toBottomOf="@id/room_name_detail"/>

        <TextView
            android:id="@+id/room_type_detail_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:padding="@dimen/lowest_margin"
            android:text="@string/type_label"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/standard_text"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/room_department_detail"/>

        <TextView
            android:id="@+id/room_type_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:padding="@dimen/lowest_margin"
            android:textSize="@dimen/standard_text"
            app:layout_constraintStart_toEndOf="@id/room_type_detail_label"
            app:layout_constraintTop_toBottomOf="@id/room_department_detail"/>

        <TextView
            android:id="@+id/room_number_detail_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:padding="@dimen/lowest_margin"
            android:text="@string/room_number_label"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/standard_text"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/room_type_detail"/>

        <TextView
            android:id="@+id/room_number_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:padding="@dimen/lowest_margin"
            android:textSize="@dimen/standard_text"
            app:layout_constraintStart_toEndOf="@id/room_number_detail_label"
            app:layout_constraintTop_toBottomOf="@id/room_type_detail"/>

        <TextView
            android:id="@+id/room_office_level_detail_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:padding="@dimen/lowest_margin"
            android:text="@string/officeLevel_label"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/standard_text"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/room_number_detail"/>

        <TextView
            android:id="@+id/room_office_level_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:padding="@dimen/lowest_margin"
            android:textSize="@dimen/standard_text"
            app:layout_constraintStart_toEndOf="@id/room_office_level_detail_label"
            app:layout_constraintTop_toBottomOf="@id/room_number_detail"/>

        <TextView
            android:id="@+id/room_booked_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:padding="@dimen/lowest_margin"
            android:text="@string/booked_label"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/standard_text"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/room_office_level_detail"/>

        <TextView
            android:id="@+id/room_booked_hour_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:padding="@dimen/lowest_margin"
            android:text="@string/time_hint"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/standard_text"
            app:layout_constraintTop_toBottomOf="@id/room_booked_label"/>

        <TextView
            android:id="@+id/room_booked_hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:padding="@dimen/lowest_margin"
            android:textSize="@dimen/standard_text"
            app:layout_constraintStart_toEndOf="@id/room_booked_hour_label"
            app:layout_constraintTop_toBottomOf="@id/room_booked_label"/>

        <TextView
            android:id="@+id/room_booked_length_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:padding="@dimen/lowest_margin"
            android:text="@string/booked_length_label"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/standard_text"
            app:layout_constraintTop_toBottomOf="@id/room_booked_hour"/>

        <TextView
            android:id="@+id/room_booked_length"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:padding="@dimen/lowest_margin"
            android:textSize="@dimen/standard_text"
            app:layout_constraintStart_toEndOf="@id/room_booked_length_label"
            app:layout_constraintTop_toBottomOf="@id/room_booked_hour"/>

        <android.support.constraint.Group
            android:id="@+id/booked_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="room_booked_length,room_booked_length_label, room_booked_hour, room_booked_hour_label, room_booked_label"/>

        <TextView
            android:id="@+id/room_lovoofact_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:padding="@dimen/lowest_margin"
            android:text="@string/lovooFact_label"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/standard_text"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/room_booked_length"/>

        <TextView
            android:id="@+id/room_title_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:padding="@dimen/lowest_margin"
            android:text="@string/title_label"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/standard_text"
            app:layout_constraintTop_toBottomOf="@id/room_lovoofact_label"/>

        <TextView
            android:id="@+id/room_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:padding="@dimen/lowest_margin"
            android:textSize="@dimen/standard_text"
            app:layout_constraintStart_toEndOf="@id/room_title_label"
            app:layout_constraintTop_toBottomOf="@id/room_lovoofact_label"/>

        <TextView
            android:id="@+id/room_text_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:padding="@dimen/lowest_margin"
            android:text="@string/text_label"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/standard_text"
            app:layout_constraintTop_toBottomOf="@id/room_title"/>

        <TextView
            android:id="@+id/room_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:padding="@dimen/lowest_margin"
            android:textSize="@dimen/small_text"
            app:layout_constraintTop_toBottomOf="@id/room_text_label"/>

        <ImageView
            android:id="@+id/room_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintTop_toBottomOf="@id/room_text"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerview_main_data_images"
            app:layout_constraintTop_toBottomOf="@id/room_text"
            android:scrollbars="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <android.support.constraint.Group
            android:id="@+id/lovoofact_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="room_text,room_text_label, room_title, room_title_label, room_lovoofact_label, room_image, recyclerview_main_data_images"/>

    </android.support.constraint.ConstraintLayout>

</ScrollView>

