<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/normal_margin"
        android:layout_marginTop="@dimen/low_margin"
        android:text="@string/book_room"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/imgClose"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/imgClose"/>

    <ImageView
        android:id="@+id/imgClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/normal_margin"
        android:layout_marginTop="@dimen/low_margin"
        android:background="?selectableItemBackgroundBorderless"
        android:src="@drawable/ic_cross"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/textHeader"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription"/>

    <EditText
        android:id="@+id/time_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/low_margin"
        android:layout_marginEnd="@dimen/highest_margin"
        android:layout_marginStart="@dimen/highest_margin"
        android:layout_marginTop="@dimen/medium_margin"
        android:hint="@string/time_hint"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/imgClose"/>

    <EditText
        android:id="@+id/length_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/low_margin"
        android:layout_marginEnd="@dimen/highest_margin"
        android:layout_marginStart="@dimen/highest_margin"
        android:layout_marginTop="@dimen/medium_margin"
        android:hint="@string/duration_hint"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/time_input"/>

    <Button
        android:id="@+id/book_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/normal_margin"
        android:layout_marginEnd="@dimen/highest_margin"
        android:layout_marginStart="@dimen/highest_margin"
        android:layout_marginTop="@dimen/highest_margin"
        android:background="@color/colorAccent"
        android:text="@string/book_room"
        app:layout_constraintTop_toBottomOf="@id/length_input"/>

</android.support.constraint.ConstraintLayout>